--- a/index.html
+++ b/index.html
@@ -8,31 +8,52 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>ByteEdit</title>
   </head>
   <body>
     <div class="wrapper">
-      <div class="block">
-      </div>
-      <!-- <div class="image-block">
-        <img class="image" src="gif/out0.gif">
-        <img class="image" src="gif/out1.gif">
-        <img class="image" src="gif/out2.gif">
-        <img class="image" src="gif/out3.gif">
-        <img class="image" src="gif/out4.gif">
-      </div> -->
       <div class="block center">
         <p class="title">ByteEdit</p>
         <p class="subtitle">Boost, Comply and Accelerate Generative Image Editing</p>
+        <p class="paragraph">
+            <a href="https://scholar.google.com/citations?user=C_6JH-IAAAAJ&hl=zh-CN&oi=ao">Yuxi Ren</a><sup>*</sup>,
+            <a href="https://scholar.google.com/citations?user=MxvLqLcAAAAJ&hl=zh-CN&oi=ao">Jie Wu</a><sup>*†</sup>,
+            <a href="https://scholar.google.com/citations?user=7YqvlBoAAAAJ&hl=zh-CN&oi=ao">Yanzuo Lu</a><sup>*</sup>,
+            <a href="https://scholar.google.com/citations?user=FunSYJUAAAAJ&hl=zh-CN&oi=ao">Huafeng Kuang</a>,
+            <a href="https://scholar.google.com/citations?user=JP14UGgAAAAJ&hl=zh-CN&oi=ao">Xin Xia</a>,
+            Xionghui Wang,
+            Qianqian Wang,
+            Yixing Zhu,
+            <a href="https://scholar.google.com/citations?hl=zh-CN&user=Z-0EqtgAAAAJ">Pan Xie</a>,
+            Shiyin Wang,
+            <a href="https://scholar.google.com/citations?hl=zh-CN&user=CVkM9TQAAAAJ">Xuefeng Xiao</a>,
+            <a href="https://scholar.google.com/citations?hl=zh-CN&user=NfFTKfYAAAAJ">Yitong Wang</a>,
+            Min Zheng,
+            Lean Fu
+        </p>
+        <c>ByteDance Inc.&emsp;<i><sup>*</sup>Equal contribution.&emsp;<sup>†</sup>Corresponding author.</i></c>
+        <div class="button-container">
+          <a href="">
+            <div class="button">
+              <c>Research Paper</c>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="image-block">
-        <img class="image" src="gif/0.gif">
-        <img class="image" src="gif/1.gif">
-        <img class="image" src="gif/2.gif">
-        <img class="image" src="gif/3.gif">
-        <img class="image" src="gif/4.gif">
+      <div class="block">
+        <p class="section-title">Inpainting Demo</p>
+        <div class="video-container">
+            <video src="video/inpainting.mp4" controls autoplay></video>
+        </div>
+      </div>
+      <div class="block">
+        <p class="section-title">Outpainting Demo</p>
+        <div class="video-container">
+            <video src="video/outpainting.mp4" controls autoplay></video>
+        </div>
       </div>
       <div class="block">
         <p class="section-title">Abstract</p>
@@ -48,27 +69,10 @@
             ByteEdit-Outpainting exhibits a remarkable enhancement of <b>388%</b> and <b>135%</b> in quality and consistency, respectively,
             when compared to the baseline model. Experiments also verfied that our acceleration models maintains excellent performance results
             in terms of quality and consistency.</p>
-        <div class="button-container">
-          <a href="" target="_blank">
-            <div class="button">
-              Research Paper
-            </div>
-          </a>
-          <!-- <a href="https://storage.cloud.google.com/editbench/editbench.tar.gz">
-            <div class="button">
-              <span class="material-symbols-outlined">download</span>EditBench (379 MB)
-            </div>
-          </a> -->
-        </div>
       </div>
       <div class="block">
         <p class="section-title">Examples</p>
-        <!-- <p class="paragraph">The input to Imagen Editor is a masked image and a text prompt, the output is an image with the unmasked areas <i>untouched</i> and the masked areas <i>filled-in</i>. The edits are faithful to input text prompts, while
-          consistent with input images:</p> -->
-        <!-- <div id="edit-examples">
-        </div> -->
-        <div class="video-container">
-            <video src="video/sora-1.mp4" controls autoplay></video>
+        <div id="edit-examples">
         </div>
       </div>
       <div class="block">
@@ -78,101 +82,56 @@
         </p>
         <img class="image" width="100%" src="images/pipeline.png">
       </div>
-      <div class="block">
-        <p class="section-title">Authors</p>
-        <p class="paragraph">
-            Yuxi Ren<sup>*</sup>,
-            Jie Wu<sup>*†</sup>,
-            Yanzuo Lu<sup>*</sup>,
-            Huafeng Kuang,
-            Xin Xia,
-            Xionghui Wang,
-            Qianqian Wang,
-            Yixing Zhu,
-            Pan Xie,
-            Shiyin Wang,
-            Xuefeng Xiao,
-            Yitong Wang,
-            Min Zheng,
-            Lean Fu
-            <!-- <a href="https://research.google/people/107321/" target="_blank">Su Wang</a><sup>*</sup>,
-            <a href="https://chitwansaharia.github.io/" target="_blank">Chitwan Saharia<sup>*</sup>,
-            <a href="https://www.linkedin.com/in/cesleedineen" target="_blank">Ceslee Montgomery<sup>*</sup></a>,
-            <a href="https://jponttuset.cat" target="_blank">Jordi Pont-Tuset</a>,
-            <a href="https://il.linkedin.com/in/shai-noy-a8363b135" target="_blank">Shai Noy</a>,
-            <a href="https://ch.linkedin.com/in/stefano-pellegrini-86654b63" target="_blank">Stefano Pellegrini</a>,
-            <a href="https://www.cs.utexas.edu/~yasumasa/" target="_blank">Yasumasa Onoe</a>,
-            <a href="https://www.linkedin.com/in/sarah-laszlo-284886114/" target="_blank">Sarah Laszlo</a>,
-            <a href="https://www.cs.toronto.edu/~fleet/" target="_blank">David J. Fleet</a>,
-            <a href="http://www.radusoricut.com" target="_blank">Radu Soricut</a>,
-            <a href="http://www.jasonbaldridge.com/" target="_blank">Jason Baldridge</a>,
-            <a href="https://norouzi.github.io/" target="_blank">Mohammad Norouzi</a><sup>†</sup>,
-            <a href="https://panderson.me/" target="_blank">Peter Anderson</a><sup>†</sup>,
-            <a href="http://williamchan.ca/" target="_blank">William Chan</a><sup>†</sup> -->
-        </p>
-        <!-- <p class="paragraph">
-            ByteDance Inc.
-        </p> -->
-        <p class="paragraph">
-          <i><sup>*</sup>Equal contribution. <sup>†</sup>Corresponding author.</i>
-        </p>
-        <!-- <p class="section-title" style="margin-top: 60px;">Special Thanks</p>
-        <p class="paragraph">
-          We would like to thank Gunjan Baid, Nicole Brichtova, Sara Mahdavi, Kathy Meier-Hellstern, Zarana Parekh, Anusha Ramesh, Tris Warkentin, Austin Waters, Vijay Vasudevan for their generous help through the course of the project. We thank Irina Blok for creating some of the examples displayed in this website. We give thanks to Igor Karpov, Isabel Kraus-Liang, Raghava Ram Pamidigantam, Mahesh Maddinala, and all the anonymous human annotators for assisting us to coordinate and complete the human evaluation tasks. We are grateful to Huiwen Chang, Austin Tarango, Douglas Eck for reviewing the paper and providing feedback. Thanks to Erica Moreira and Victor Gomes for help with resource coordination. Finally, we would like to give our thanks and appreciation to the authors of DALL-E 2 for their permission for us to use the outputs from their model for research purposes.
-        </p> -->
-      </div>
     </div>
   </body>
-  <!-- <script type="text/javascript">
+  <script type="text/javascript">
 
     const shortSwitchTime = 2000;
     const longSwitchTime = 6000;
-    const imageIds = ["deer", "duck"];
+    const imageIds = ["elephant", "coffee"];
     const images = {
-      "deer":
+      "elephant":
          {
-           id: "deer",
-           src: "images/deer_original.png",
+           id: "elephant",
+           src: "images/elephant/origin.png",
            currentlySelected: 0,
            nextSwitch: undefined,
            prompts: [
-             "A bouquet of red flowers",
-             "Two trees",
-             'A sign that says "Imagen Editor"',
-             "A bush with green leaves",
-             "A bush without leaves",
+             "across river",
+             "flower surround",
+             'ice and snow"',
+             "muddy trail",
+             "rainforest",
+             "the sea"
            ],
            targets: [
-             "images/deer_1.jpg",
-             "images/deer_2.jpg",
-             "images/deer_3.jpg",
-             "images/deer_4.jpg",
-             "images/deer_5.jpg",
+             "images/elephant/elephant_1.png",
+             "images/elephant/elephant_2.png",
+             "images/elephant/elephant_3.png",
+             "images/elephant/elephant_4.png",
+             "images/elephant/elephant_5.png",
+             "images/elephant/elephant_6.png"
            ]
          },
-       "duck":
+       "coffee":
          {
-           id: "duck",
-           src: "images/duck_original.png",
+           id: "coffee",
+           src: "images/coffee/origin.png",
            currentlySelected: 0,
            nextSwitch: undefined,
            prompts: [
-             "A line drawing of an octopus",
-             "A line drawing of an alligator",
-             "A line drawing of a dinosaur",
-             "A line drawing of a lizard",
-             "A line drawing of a horse",
-             "A line drawing of a person",
-             "A line drawing of a person",
+             "a coffee cup",
+             "a cup of tea",
+             "a pot",
+             "coffee flavored cake",
+             "\"no prompt\""
            ],
            targets: [
-             "images/duck_5.jpg",
-             "images/duck_1.jpg",
-             "images/duck_2.jpg",
-             "images/duck_3.jpg",
-             "images/duck_4.jpg",
-             "images/duck_6.jpg",
-             "images/duck_7.jpg"
+           "images/coffee/coffee_1.png",
+             "images/coffee/coffee_2.png",
+             "images/coffee/coffee_3.png",
+             "images/coffee/coffee_4.png",
+             "images/coffee/coffee_5.png",
            ]
          },
       }
@@ -245,7 +204,7 @@
       newEditingBlock(imageId);
       loopThroughPrompts(imageId);
     }
-  </script> -->
+  </script>
 </html>
 
 
