--- a/index.html
+++ b/index.html
@@ -56,12 +56,24 @@
       </div>
       <div class="block">
         <p class="section-title">Outpainting Demo</p>
-        <div class="gif-viewer">
+        <!-- <div class="gif-viewer">
             <button id="left-button-out">&lt;</button>
             <img id="gif-display-out" src="outpainting-1.gif" />
             <button id="right-button-out">&gt;</button>
         </div>
-        <script src="script.js"></script>
+        <script src="script.js"></script> -->
+        <div style="width: 100%;">
+            <img class="image" style="width: 50%; float: left;"  src="outpainting-1.gif">
+            <img class="image" style="width: 50%; float: right;" src="outpainting-2.gif">
+        </div>
+        <div style="width: 100%;">
+            <img class="image" style="width: 50%; float: left;"  src="outpainting-3.gif">
+            <img class="image" style="width: 50%; float: right;" src="outpainting-4.gif">
+        </div>
+        <div style="width: 100%;">
+            <img class="image" style="width: 50%; float: left;"  src="outpainting-5.gif">
+            <img class="image" style="width: 50%; float: right;" src="outpainting-6.gif">
+        </div>
       </div>
       <div class="block">
         <p class="section-title">Abstract</p>
