--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <title>ByteEdit</title>
   </head>
   <body>
+    <div class="block"></div>
     <div class="wrapper">
       <div class="block center">
         <p class="title">ByteEdit</p>
         <p class="subtitle">Boost, Comply and Accelerate Generative Image Editing</p>
-        <p class="paragraph">
+        <p class="author">
             <a href="https://scholar.google.com/citations?user=C_6JH-IAAAAJ&hl=zh-CN&oi=ao">Yuxi Ren</a><sup>*</sup>,
             <a href="https://scholar.google.com/citations?user=MxvLqLcAAAAJ&hl=zh-CN&oi=ao">Jie Wu</a><sup>*†</sup>,
             <a href="https://scholar.google.com/citations?user=7YqvlBoAAAAJ&hl=zh-CN&oi=ao">Yanzuo Lu</a><sup>*</sup>,
@@ -34,18 +35,18 @@
             Min Zheng,
             Lean Fu
         </p>
-        <c>ByteDance Inc.&emsp;<i><sup>*</sup>Equal contribution.&emsp;<sup>†</sup>Corresponding author.</i></c>
+        <c>ByteDance Inc.&emsp;<i><sup>*</sup>Equal Contribution&emsp;<sup>†</sup>Project Lead</i></c>
         <div class="button-container">
           <a href="">
             <div class="button">
-              <c>Research Paper</c>
+              <a href="https://arxiv.org/abs/2404.04860">Research Paper</a>
             </div>
           </a>
         </div>
       </div>
 
       <div class="block">
-        <p class="section-title">Inpainting Demo</p>
+        <p class="section-title" style="margin-top: 30px;">Inpainting Demo</p>
         <!-- <div class="gif-viewer">
             <button id="left-button-in">&lt;</button>
             <img id="gif-display-in" src="gif/inpainting/inpainting-1.gif" />
@@ -55,7 +56,7 @@
         <!-- <script src="script.js"></script> -->
       </div>
       <div class="block">
-        <p class="section-title">Outpainting Demo</p>
+        <p class="section-title" style="margin-top: 30px;">Outpainting Demo</p>
         <!-- <div class="gif-viewer">
             <button id="left-button-out">&lt;</button>
             <img id="gif-display-out" src="outpainting-1.gif" />
@@ -91,19 +92,19 @@
             in terms of quality and consistency.</p>
       </div>
       <div class="block">
-        <p class="section-title">Examples</p>
+        <p class="section-title" style="margin-top: 30px;">Examples</p>
         <div id="edit-examples">
         </div>
       </div>
       <div class="block">
-        <p class="section-title" style="margin-top: 60px;">Pipeline</p>
+        <p class="section-title" style="margin-top: 30px;">Pipeline</p>
         <p class="paragraph">
             ByteEdit formulates a comprehensive feedback learning framework that facilitating aesthetics, image-text matching, consistency and inference speed.
         </p>
         <img class="image" width="100%" src="images/pipeline.png">
       </div>
       <div class="block">
-        <p class="section-title" style="margin-top: 60px;">Human Evaluation</p>
+        <p class="section-title" style="margin-top: 30px;">Human Evaluation</p>
         <p class="paragraph">
             <!-- Comparisons with state-of-the-art generative image editing systems in terms of human preference (i.e. GSB).
             More than 12,000 samples are collected for each task.
@@ -128,6 +129,22 @@
             <img class="image" style="width: 50%; float: right;" src="images/accelerate-1.png">
       </div>
     </div>
+    <div class="block">
+        <p class="section-title" style="margin-top: 30px;">BibTex</p>
+        <div class="bibtex-container">
+        <pre>
+    @misc{ren2024byteedit,
+        title={ByteEdit: Boost, Comply and Accelerate Generative Image Editing},
+        author={Yuxi Ren and Jie Wu and Yanzuo Lu and Huafeng Kuang and Xin Xia and Xionghui Wang and Qianqian Wang and Yixing Zhu and Pan Xie and Shiyin Wang and Xuefeng Xiao and Yitong Wang and Min Zheng and Lean Fu},
+        year={2024},
+        eprint={2404.04860},
+        archivePrefix={arXiv},
+        primaryClass={cs.CV}
+    }
+        </pre>
+        </div>
+    <div class="block"></div>
+      </div>
     </div>
     </div>
   </body>
