empty line removed

--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
         eprint={2404.04860},
         archivePrefix={arXiv},
         primaryClass={cs.CV}
-    }
-        </pre>
+    }</pre>
         </div>
     <div class="block"></div>
       </div>
