--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             Lean Fu
         </p>
         <c>ByteDance Inc.&emsp;<i><sup>*</sup>Equal Contribution&emsp;<sup>†</sup>Project Lead</i></c>
+        <b><font size="5">ECCV 2024</font></b>
         <div class="button-container">
           <a href="">
             <div class="button">
