--- a/index.html
+++ b/index.html
@@ -36,18 +36,19 @@
             Lean Fu
         </p>
         <c>ByteDance Inc.&emsp;<i><sup>*</sup>Equal Contribution&emsp;<sup>†</sup>Project Lead</i></c>
-        <b><font size="5">ECCV 2024</font></b>
-        <div class="button-container">
-          <a href="">
+        <p class="subtitle">ECCV 2024</p>
+        <b><font size="5"></font></b>
+        <!-- <div class="button-container"> -->
+          <!-- <a href=""> -->
             <div class="button">
               <a href="https://arxiv.org/abs/2404.04860">Research Paper</a>
             </div>
-          </a>
-        </div>
+          <!-- </a> -->
+        <!-- </div> -->
       </div>
 
       <div class="block">
-        <p class="section-title" style="margin-top: 30px;">Inpainting Demo</p>
+        <p class="section-title" style="margin-top: 10px;">Inpainting Demo</p>
         <!-- <div class="gif-viewer">
             <button id="left-button-in">&lt;</button>
             <img id="gif-display-in" src="gif/inpainting/inpainting-1.gif" />
@@ -57,7 +58,7 @@
         <!-- <script src="script.js"></script> -->
       </div>
       <div class="block">
-        <p class="section-title" style="margin-top: 30px;">Outpainting Demo</p>
+        <p class="section-title" style="margin-top: 10px;">Outpainting Demo</p>
         <!-- <div class="gif-viewer">
             <button id="left-button-out">&lt;</button>
             <img id="gif-display-out" src="outpainting-1.gif" />
@@ -93,19 +94,19 @@
             in terms of quality and consistency.</p>
       </div>
       <div class="block">
-        <p class="section-title" style="margin-top: 30px;">Examples</p>
+        <p class="section-title" style="margin-top: 10px;">Examples</p>
         <div id="edit-examples">
         </div>
       </div>
       <div class="block">
-        <p class="section-title" style="margin-top: 30px;">Pipeline</p>
+        <p class="section-title" style="margin-top: 10px;">Pipeline</p>
         <p class="paragraph">
             ByteEdit formulates a comprehensive feedback learning framework that facilitating aesthetics, image-text matching, consistency and inference speed.
         </p>
         <img class="image" width="100%" src="images/pipeline.png">
       </div>
       <div class="block">
-        <p class="section-title" style="margin-top: 30px;">Human Evaluation</p>
+        <p class="section-title" style="margin-top: 10px;">Human Evaluation</p>
         <p class="paragraph">
             <!-- Comparisons with state-of-the-art generative image editing systems in terms of human preference (i.e. GSB).
             More than 12,000 samples are collected for each task.
@@ -131,16 +132,14 @@
       </div>
     </div>
     <div class="block">
-        <p class="section-title" style="margin-top: 30px;">BibTex</p>
+        <p class="section-title" style="margin-top: 10px;">BibTex</p>
         <div class="bibtex-container">
         <pre>
-    @misc{ren2024byteedit,
+    @InProceedings{ren2024byteedit,
         title={ByteEdit: Boost, Comply and Accelerate Generative Image Editing},
-        author={Yuxi Ren and Jie Wu and Yanzuo Lu and Huafeng Kuang and Xin Xia and Xionghui Wang and Qianqian Wang and Yixing Zhu and Pan Xie and Shiyin Wang and Xuefeng Xiao and Yitong Wang and Min Zheng and Lean Fu},
-        year={2024},
-        eprint={2404.04860},
-        archivePrefix={arXiv},
-        primaryClass={cs.CV}
+        author={Ren, Yuxi and Wu, Jie and Lu, Yanzuo and Kuang, Huafeng and Xia, Xin and Wang, Xionghui and Wang, Qianqian and Zhu, Yixing and Xie, Pan and Wang, Shiyin and others},
+        booktitle={ECCV},
+        year={2024}
     }</pre>
         </div>
     <div class="block"></div>
